--- a/requirements_streamlit.txt
+++ b/requirements_streamlit.txt
@@ -11,5 +11,5 @@ pypdf>=3.17.4
 sentence-transformers>=2.2.2
 huggingface-hub>=0.19.4
 openai>=1.6.1
-pinecone-client>=2.2.4
+pinecone>=4.0.0
 pydantic>=2.5.2
